@@ -17,7 +17,7 @@ import edu.wpi.first.math.kinematics.DifferentialDriveKinematics;
 import edu.wpi.first.math.trajectory.Trajectory;
 import edu.wpi.first.math.trajectory.TrajectoryConfig;
 import edu.wpi.first.math.trajectory.TrajectoryGenerator;
-import java.util.List;
+import java.util.Arrays;
 import java.util.Random;
 import java.util.TreeMap;
 import java.util.function.Function;
@@ -39,7 +39,7 @@ class DifferentialDrivePoseEstimatorTest {
             VecBuilder.fill(0.1, 0.1, 0.1));
     var trajectory =
         TrajectoryGenerator.generateTrajectory(
-            List.of(
+            Arrays.asList(
                 new Pose2d(0, 0, Rotation2d.fromDegrees(45)),
                 new Pose2d(3, 0, Rotation2d.fromDegrees(-90)),
                 new Pose2d(0, 0, Rotation2d.fromDegrees(135)),
@@ -81,7 +81,7 @@ class DifferentialDrivePoseEstimatorTest {
 
     var trajectory =
         TrajectoryGenerator.generateTrajectory(
-            List.of(
+            Arrays.asList(
                 new Pose2d(0, 0, Rotation2d.fromDegrees(45)),
                 new Pose2d(3, 0, Rotation2d.fromDegrees(-90)),
                 new Pose2d(0, 0, Rotation2d.fromDegrees(135)),
