@@ -12,7 +12,7 @@ import edu.wpi.first.math.geometry.Rotation2d;
 import edu.wpi.first.math.geometry.Translation2d;
 import edu.wpi.first.math.trajectory.TrajectoryConfig;
 import edu.wpi.first.math.trajectory.TrajectoryGenerator;
-import java.util.List;
+import java.util.Arrays;
 import java.util.Random;
 import org.junit.jupiter.api.Test;
 
@@ -106,7 +106,7 @@ class MecanumDriveOdometryTest {
 
     var trajectory =
         TrajectoryGenerator.generateTrajectory(
-            List.of(
+            Arrays.asList(
                 new Pose2d(),
                 new Pose2d(20, 20, Rotation2d.fromDegrees(0)),
                 new Pose2d(10, 10, Rotation2d.fromDegrees(180)),
@@ -195,7 +195,7 @@ class MecanumDriveOdometryTest {
 
     var trajectory =
         TrajectoryGenerator.generateTrajectory(
-            List.of(
+            Arrays.asList(
                 new Pose2d(),
                 new Pose2d(20, 20, Rotation2d.fromDegrees(0)),
                 new Pose2d(10, 10, Rotation2d.fromDegrees(180)),
