@@ -13,7 +13,7 @@ import edu.wpi.first.math.geometry.Translation2d;
 import edu.wpi.first.math.trajectory.constraint.MaxVelocityConstraint;
 import edu.wpi.first.math.trajectory.constraint.RectangularRegionConstraint;
 import edu.wpi.first.math.util.Units;
-import java.util.List;
+import java.util.Arrays;
 import org.junit.jupiter.api.Test;
 
 class RectangularRegionConstraintTest {
@@ -29,7 +29,7 @@ class RectangularRegionConstraintTest {
             maxVelocityConstraint);
 
     // Get trajectory
-    var trajectory = TrajectoryGeneratorTest.getTrajectory(List.of(regionConstraint));
+    var trajectory = TrajectoryGeneratorTest.getTrajectory(Arrays.asList(regionConstraint));
 
     // Iterate through trajectory and check constraints
     boolean exceededConstraintOutsideRegion = false;
